修改部分文字描述

--- a/source/_posts/2012-10-18-git-usage.markdown
+++ b/source/_posts/2012-10-18-git-usage.markdown
@@ -10,7 +10,7 @@ tags:
 ---
 
 开始研究Git，[《Git权威指南》](http://www.worldhello.net/gotgit/)这本书看了一部分了，觉得讲解的挺详细挺好的。
-在这里记录一下部分Git命令，方便查找。
+记录部分Git命令，方便查找。
 
 ### 参数配置
 ```
